# xiaozhi-linux-imx6ull

./: LICENSE  README.md  README_100ask.md  README_PLUS.md
control_center/: .control_center.o.d  .http.o.d  .ipc_udp.o.d  .uuid.o.d  .websocket_client.o.d  CMakeLists.txt  Makefile  Makefile_old  control_center.cpp  uuid.cpp  websocket_client.cpp
control_center/lib/alsa-lib-share/lib/: libasound.la  libasound.so.2.0.0  libatopology.la  libatopology.so.2.0.0
control_center/lib/alsa-lib-share/lib/pkgconfig/: alsa.pc
control_center/lib/cjson_install/lib/: libcjson.so.1.7.19  libcjson_utils.so.1
control_center/src/: CMakeLists.txt  board.cc  board.h  control_center.cpp  http.cpp  http.h  ipc_udp.cpp  mcp_server.cc  mcp_server.h  websocket_client.cpp
control_center/src/media/: esp32_music.cc  esp32_music.h  simple_volume.h  volume_alsa.h
gui/: CMakeLists.txt  Makefile  build.sh  lv_conf.defaults  lv_conf.h  main.c  toolchain.cmake
gui/lv_100ask_xz_ai/: CMakeLists.txt
gui/lv_100ask_xz_ai/src/: ipc_udp.c  lang_config.h  lv_100ask_xz_ai_main.c  lv_100ask_xz_ai_main.h  ui_system.c
gui/lvgl/: CMakeLists.txt  lvgl.h
gui/lvgl/libpng/lib/: libpng16.so.16.21
gui/lvgl/libpng/lib/pkgconfig/: libpng16.pc
gui/lvgl/libz/lib/: libz.so.1.2.8
gui/lvgl/libz/lib/pkgconfig/: zlib.pc
gui/lvgl/src/: lv_init.c
gui/lvgl/src/draw/: lv_image_decoder.c
gui/lvgl/src/font/: lv_font.h
gui/lvgl/src/libs/freetype/: lv_freetype.c
sound_app/: Makefile  Makefile_old  aplay.cpp  cfg.h  ipc_udp.cpp  opus.cpp  record.cpp  sound_app  sound_app.cpp  说明.md
